test/types/file/closedWithoutOpen.good
closedWithoutOpen.chpl:3: error: halt reached - ***Error: Trying to close "./closedWithoutOpen.txt" which isn't open***
