test/types/file/closedWithoutOpen.chpl
var f : file = new file(filename = "closedWithoutOpen.txt", mode = "w");

f.close();
